# CashBook_test

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/routers/: __init__.py  accounts.py  categories.py  csv_io.py  liabilities.py  month_locks.py  monthly_balances.py  summary.py  transactions.py
app/db/: init_db.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_monthly_balance_per_account.py  0003_monthly_locks.py  0004_user_password_hash.py
app/schemas/: __init__.py  common.py
app/services/: __init__.py  auth.py  csv_io.py  month_locks.py  summary.py  transactions.py
app/web/: auth_cookie.py  routes.py
app/web/static/: style.css
app/web/static/templates/: accounts_import_prompt_template.md  accounts_import_template.json
app/web/templates/: base.html  index.html  login.html  month.html  opening_balances.html  settings.html
docs/: TECH_SUMMARY.md
scripts/: bootstrap.sh  seed_example.py
tests/: conftest.py  test_csv_io.py  test_summary.py
